--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       position: relative;
       right: -70%;
       top: -40%;
-      height: 500px;
+      height: 450px;
       -webkit-box-shadow: 10px 10px 5px 0px rgba(183,183,183,1);
       -moz-box-shadow: 10px 10px 5px 0px rgba(183,183,183,1);
       box-shadow: 10px 10px 5px 0px rgba(183,183,183,1);
@@ -156,9 +156,9 @@
     }
     .gallery-absolute {
       position: absolute;
-      width: 600px;
-      left: 330px;
-      top: 100px;
+      width: 500px;
+      left: 380px;
+      top: 90px;
     }
   </style>
 </head>
@@ -220,7 +220,8 @@
           <img class="logo-target" src="lamp_17056156.png" alt="">
           <h6 class="title-target-info">INNOVATE SOLUTIONS</h4>
         </div>
-        <p class="subtitle-target-info">Hola</p>
+        <p class="subtitle-target-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste similique iusto amet veniam illum blanditiis optio, sequi omnis provident saepe quae expedita excepturi pariatur? Numquam optio fuga consectetur repellat voluptate.
+        </p>
       </div>
       <div>
         <div class="title-target-info">
